--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -19,7 +19,7 @@ jobs:
             UNZIP_COMMAND: unzip -qa
             ARTIFACT_NAME: qtBase_6.0.2_xenial
             CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
-            APT_PACKAGES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev apt-transport-https ca-certificates gnupg software-properties-common
+            APT_PACKAGES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev
           - os: ubuntu-18.04
             OPEN_SSL_FILE: openSSL_1_1_1j_ubuntu_bionic.zip
             UNZIP_COMMAND: unzip -qa
@@ -62,12 +62,7 @@ jobs:
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
     - name: Update Cmake and GCC (ubuntu 16)
       run: |
-        sudo add-apt-repository -y ppa:jonathonf/gcc
-        sudo apt install gcc-8
-        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/gcc-ar gcc-ar /usr/bin/gcc-ar-8 --slave /usr/bin/gcc-nm gcc-nm /usr/bin/gcc-nm-8 --slave /usr/bin/gcc-ranlib gcc-ranlib /usr/bin/gcc-ranlib-8
-        sudo wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
-        sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ xenial main'
-        sudo apt install cmake
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 60 --slave /usr/bin/gcc-ar gcc-ar /usr/bin/gcc-ar-9 --slave /usr/bin/gcc-nm gcc-nm /usr/bin/gcc-nm-9 --slave /usr/bin/gcc-ranlib gcc-ranlib /usr/bin/gcc-ranlib-9
       if: matrix.os == 'ubuntu-16.04'
     - name: Build Windows
       run: |
