--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -19,21 +19,19 @@ jobs:
             UNZIP_COMMAND: unzip -qa
             ARTIFACT_NAME: qtBase_6.0.2_xenial
             CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
-            APT_PACKAGES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev
-          - os: ubuntu-18.04
-            OPEN_SSL_FILE: openSSL_1_1_1j_ubuntu_bionic.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.0.2_bionic
-            CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
-            APT_PACKAGES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev
-          - os: windows-2019
-            UNZIP_COMMAND: 7z x
-            ARTIFACT_NAME: qtBase_6.0.2_win
-          - os: macos-10.15
-            OPEN_SSL_FILE: openSSL_1_1_1j_mac.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.0.2_mac
-            CONFIGURE_EXTRA: 
+          # - os: ubuntu-18.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1j_ubuntu_bionic.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ARTIFACT_NAME: qtBase_6.0.2_bionic
+          #   CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
+          # - os: windows-2019
+          #   UNZIP_COMMAND: 7z x
+          #   ARTIFACT_NAME: qtBase_6.0.2_win
+          # - os: macos-10.15
+          #   OPEN_SSL_FILE: openSSL_1_1_1j_mac.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ARTIFACT_NAME: qtBase_6.0.2_mac
+          #   CONFIGURE_EXTRA: 
     steps:
     - name: Download precompiled openSSL (windows)
       run: |
@@ -58,11 +56,12 @@ jobs:
       shell: cmd
       if: matrix.os == 'windows-2019'
     - name: Install Linux Dependencies
-      run: sudo apt install ${{matrix.APT_PACKAGES}}
+      run: sudo apt install build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev ninja
       if: matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04'
     - name: Update Cmake and GCC (ubuntu 16)
       run: |
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 60 --slave /usr/bin/gcc-ar gcc-ar /usr/bin/gcc-ar-9 --slave /usr/bin/gcc-nm gcc-nm /usr/bin/gcc-nm-9 --slave /usr/bin/gcc-ranlib gcc-ranlib /usr/bin/gcc-ranlib-9
+        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 60
       if: matrix.os == 'ubuntu-16.04'
     - name: Build Windows
       run: |
