Set threading to 2

--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -72,7 +72,7 @@ jobs:
         copy C:\ProgramData\chocolatey\bin\win_bison.exe C:\ProgramData\chocolatey\bin\bison.exe
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX="d:\\a\YUViewQt\\YUViewQt\\Qt" -DQT_BUILD_TESTS=OFF -DQT_BUILD_EXAMPLES=OFF -DINPUT_opengl=dynamic -DQT_QMAKE_TARGET_MKSPEC=win32-msvc2015 -DINPUT_openssl=runtime -DOPENSSL_ROOT_DIR="d:\\a\\YUViewQt\\YUViewQt\\openSSL" -DFEATURE_sql=OFF -DFEATURE_direct2d=OFF
-        cmake --build . --parallel
+        cmake --build . --parallel 2
         cmake --install .
         cd ..
         7z a -r ${{matrix.ARTIFACT_NAME}}.zip Qt
@@ -84,7 +84,7 @@ jobs:
         cd Qt_build
         mkdir .git
         cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/Qt -DQT_BUILD_TESTS=OFF -DQT_BUILD_EXAMPLES=OFF -DINPUT_openssl=runtime -DOPENSSL_ROOT_DIR=${GITHUB_WORKSPACE}/openSSL/ ${{matrix.CONFIGURE_EXTRA}}
-        cmake --build . --parallel
+        cmake --build . --parallel 2
         cmake --install .
         cd ..
         zip -r ${{matrix.ARTIFACT_NAME}}.zip Qt
