--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -14,24 +14,24 @@ jobs:
     strategy:
       matrix:
         include: 
-          - os: ubuntu-16.04
-            OPEN_SSL_FILE: openSSL_1_1_1j_ubuntu_xenial.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.0.2_xenial
-            CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
-          - os: ubuntu-18.04
-            OPEN_SSL_FILE: openSSL_1_1_1j_ubuntu_bionic.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.0.2_bionic
-            CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
-          # - os: windows-2019
-          #   UNZIP_COMMAND: 7z x
-          #   ARTIFACT_NAME: qtBase_6.0.2_win
-          # - os: macos-10.15
-          #   OPEN_SSL_FILE: openSSL_1_1_1j_mac.zip
+          # - os: ubuntu-16.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1j_ubuntu_xenial.zip
           #   UNZIP_COMMAND: unzip -qa
-          #   ARTIFACT_NAME: qtBase_6.0.2_mac
-          #   CONFIGURE_EXTRA: 
+          #   ARTIFACT_NAME: qtBase_6.0.2_xenial
+          #   CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
+          # - os: ubuntu-18.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1j_ubuntu_bionic.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ARTIFACT_NAME: qtBase_6.0.2_bionic
+          #   CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
+          - os: windows-2019
+            UNZIP_COMMAND: 7z x
+            ARTIFACT_NAME: qtBase_6.0.2_win
+          - os: macos-10.15
+            OPEN_SSL_FILE: openSSL_1_1_1j_mac.zip
+            UNZIP_COMMAND: unzip -qa
+            ARTIFACT_NAME: qtBase_6.0.2_mac
+            CONFIGURE_EXTRA: 
     steps:
     - name: Download precompiled openSSL (windows)
       run: |
