--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -43,7 +43,7 @@ jobs:
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         mkdir build
         cd build
-        cmake ../Qttools/src/windeployqt
+        cmake ../Qttools/
         cmake --build . --parallel 2
         cd ..
         7z a -r ${{matrix.ARTIFACT_NAME}}.zip build/windeployqt.exe
@@ -54,7 +54,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ../Qttools/src/macdeployqt
+        cmake ../Qttools/
         cmake --build . --parallel 2
         zip -r ${{matrix.ARTIFACT_NAME}}.zip build/macdeployqt
       if: matrix.os == 'macos-10.15'
