--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -52,7 +52,7 @@ jobs:
       shell: cmd
       if: matrix.os == 'windows-2019'
       env:
-        Qt6_DIR: ${{ github.workspace }}/Qt
+        Qt6_DIR: ${{ github.workspace }}/Qt/lib/cmake/Qt6
     - name: Build Mac
       run: |
         echo $Qt6_DIR
@@ -63,7 +63,7 @@ jobs:
         zip -r ${{matrix.ARTIFACT_NAME}}.zip build/macdeployqt
       if: matrix.os == 'macos-10.15'
       env:
-        Qt6_DIR: ${{ github.workspace }}/Qt
+        Qt6_DIR: ${{ github.workspace }}/Qt/lib/cmake/Qt6
     # - name: Upload Artifact
     #   uses: actions/upload-artifact@v2
     #   with:
