--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -65,6 +65,7 @@ jobs:
       if: matrix.os == 'macos-10.15'
       env:
         Qt6_DIR: ${{ github.workspace }}/Qt/lib/cmake/Qt6
+        Qt6CoreTools_DIR: ${{ github.workspace }}/Qt/lib/cmake/Qt6CoreTools
     # - name: Upload Artifact
     #   uses: actions/upload-artifact@v2
     #   with:
