--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -55,11 +55,9 @@ jobs:
         Qt6_DIR: ${{ github.workspace }}/Qt/lib/cmake/Qt6
     - name: Build Mac
       run: |
-        echo $Qt6_DIR
-        ls $Qt6_DIR
         mkdir build
         cd build
-        cmake ../Qttools/
+        cmake -DFEATURE_assistant=OFF -DFEATURE_designer=OFF -DFEATURE_distancefieldgenerator=OFF -DFEATURE_kmap2qmap=OFF -DFEATURE_linguist=OFF -DFEATURE_pixeltool=OFF -DFEATURE_qdbus=OFF -DFEATURE_qev=OFF -DFEATURE_qtattributionsscanner=OFF -DFEATURE_qtdiag=OFF -DFEATURE_qtplugininfo=OFF ../Qttools/
         cmake --build . --parallel 2
         zip -r ${{matrix.ARTIFACT_NAME}}.zip build/macdeployqt
       if: matrix.os == 'macos-10.15'
