--- a/.github/workflows/QtDeployTools.yml
+++ b/.github/workflows/QtDeployTools.yml
@@ -44,10 +44,10 @@ jobs:
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         mkdir build
         cd build
-        cmake ../Qttools/
+        cmake -DFEATURE_designer=OFF -DFEATURE_distancefieldgenerator=OFF -DFEATURE_kmap2qmap=OFF -DFEATURE_linguist=OFF -DFEATURE_pixeltool=OFF -DFEATURE_qdbus=OFF -DFEATURE_qev=OFF -DFEATURE_qtattributionsscanner=OFF -DFEATURE_qtdiag=OFF -DFEATURE_qtplugininfo=OFF ../Qttools/
         cmake --build . --parallel 2
         cd ..
-        7z a -r ${{matrix.ARTIFACT_NAME}}.zip build/windeployqt.exe
+        7z a -r ${{matrix.ARTIFACT_NAME}}.zip build
         dir
       shell: cmd
       if: matrix.os == 'windows-2019'
@@ -59,7 +59,8 @@ jobs:
         cd build
         cmake -DFEATURE_assistant=OFF -DFEATURE_designer=OFF -DFEATURE_distancefieldgenerator=OFF -DFEATURE_kmap2qmap=OFF -DFEATURE_linguist=OFF -DFEATURE_pixeltool=OFF -DFEATURE_qdbus=OFF -DFEATURE_qev=OFF -DFEATURE_qtattributionsscanner=OFF -DFEATURE_qtdiag=OFF -DFEATURE_qtplugininfo=OFF ../Qttools/
         cmake --build . --parallel 2
-        zip -r ${{matrix.ARTIFACT_NAME}}.zip build/macdeployqt
+        cd ..
+        zip -r ${{matrix.ARTIFACT_NAME}}.zip build/
       if: matrix.os == 'macos-10.15'
       env:
         Qt6_DIR: ${{ github.workspace }}/Qt/lib/cmake/Qt6
