--- a/.github/workflows/openssl.yml
+++ b/.github/workflows/openssl.yml
@@ -47,7 +47,7 @@ jobs:
           curl -L https://github.com/openssl/openssl/archive/OpenSSL_1_1_1u.zip -o openSSL.zip
           ${{matrix.UNZIP_COMMAND}} openSSL.zip
           mv openssl-OpenSSL_1_1_1u openSSL
-      - name: Install windows dependencies
+      - name: Install perl for windows build
         run: |
           choco install strawberryperl
           perl --version
@@ -103,7 +103,7 @@ jobs:
           cp openSSL/libcrypto.* openSSL/libssl.* artifact
         if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-22.04'
       - name: Upload Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: ${{matrix.ARTIFACT_NAME}}
           path: artifact
@@ -112,16 +112,11 @@ jobs:
           cd artifact
           ${{matrix.ZIP_COMMAND}} ../${{matrix.ARTIFACT_NAME}}.zip *
           cd ..
-      - name: Upload
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          upload_url: ${{github.event.release.upload_url}}
-          asset_path: ${{matrix.ARTIFACT_NAME}}.zip
-          asset_name: ${{matrix.ARTIFACT_NAME}}.zip
-          asset_content_type: application/zip
-        if: github.event_name == 'release'
+          files: ${{matrix.ARTIFACT_NAME}}.zip
 
   # How to upload files to the release:
   # https://github.com/Blacksmoke16/oq/pull/47/files#diff-082c28d748ad2e3eecc5508d740d9417R9-R29
