--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -28,36 +28,36 @@ jobs:
             CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
             PACKAGE_INSTALL_CALL: sudo apt install
             PACKAGE_DEPENDENCIES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev ninja-build
-          - os: windows-2019
-            OPEN_SSL_FILE: openSSL_1_1_1u_windows2019.zip
-            UNZIP_COMMAND: 7z x
-            ARTIFACT_NAME: qtBase_6.5.2_win2019
-          - os: windows-2022
-            OPEN_SSL_FILE: openSSL_1_1_1u_windows2022.zip
-            UNZIP_COMMAND: 7z x
-            ARTIFACT_NAME: qtBase_6.5.2_win2022
-          - os: macos-11
-            OPEN_SSL_FILE: openSSL_1_1_1u_mac11.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.5.2_mac
-            CONFIGURE_EXTRA:
-          - os: macos-12
-            OPEN_SSL_FILE: openSSL_1_1_1u_mac12.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.5.2_mac
-            CONFIGURE_EXTRA:
+          # - os: windows-2019
+          #   OPEN_SSL_FILE: openSSL_1_1_1u_windows2019.zip
+          #   UNZIP_COMMAND: 7z x
+          #   ARTIFACT_NAME: qtBase_6.5.2_win2019
+          # - os: windows-2022
+          #   OPEN_SSL_FILE: openSSL_1_1_1u_windows2022.zip
+          #   UNZIP_COMMAND: 7z x
+          #   ARTIFACT_NAME: qtBase_6.5.2_win2022
+          # - os: macos-11
+          #   OPEN_SSL_FILE: openSSL_1_1_1u_mac11.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ARTIFACT_NAME: qtBase_6.5.2_mac
+          #   CONFIGURE_EXTRA:
+          # - os: macos-12
+          #   OPEN_SSL_FILE: openSSL_1_1_1u_mac12.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ARTIFACT_NAME: qtBase_6.5.2_mac
+          #   CONFIGURE_EXTRA:
     steps:
     - uses: seanmiddleditch/gha-setup-ninja@master
     - uses: ilammy/msvc-dev-cmd@v1
     - name: Download precompiled openSSL (windows)
       run: |
-        curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSL1.1.1j/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
+        curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSL1.1.1u/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
         7z x openSSL.zip -oopenSSL
       shell: cmd
       if: matrix.os == 'windows-2019' || matrix.os == 'windows-2022'
     - name: Download precompiled openSSL (mac/linux)
       run: |
-        curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSL1.1.1j/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
+        curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSL1.1.1u/${{matrix.OPEN_SSL_FILE}} -o openSSL.zip
         unzip -qa openSSL.zip -d openSSL
       if: matrix.os != 'windows-2019' && matrix.os != 'windows-2022'
     - name: Download QtBase Sources
