--- a/.github/workflows/qtbase.yml
+++ b/.github/workflows/qtbase.yml
@@ -14,28 +14,28 @@ jobs:
     strategy:
       matrix:
         include: 
-          - os: ubuntu-20.04
-            OPEN_SSL_FILE: openSSL_1_1_1u_ubuntu20.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.5.2_ubuntu20
-            CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
-            PACKAGE_INSTALL_CALL: sudo apt install
-            PACKAGE_DEPENDENCIES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev ninja-build
-          - os: ubuntu-22.04
-            OPEN_SSL_FILE: openSSL_1_1_1u_ubuntu22.zip
-            UNZIP_COMMAND: unzip -qa
-            ARTIFACT_NAME: qtBase_6.0.2_bionic
-            CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
-            PACKAGE_INSTALL_CALL: sudo apt install
-            PACKAGE_DEPENDENCIES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev ninja-build
-          # - os: windows-2019
-          #   OPEN_SSL_FILE: openSSL_1_1_1u_windows2019.zip
-          #   UNZIP_COMMAND: 7z x
-          #   ARTIFACT_NAME: qtBase_6.5.2_win2019
-          # - os: windows-2022
-          #   OPEN_SSL_FILE: openSSL_1_1_1u_windows2022.zip
-          #   UNZIP_COMMAND: 7z x
-          #   ARTIFACT_NAME: qtBase_6.5.2_win2022
+          # - os: ubuntu-20.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1u_ubuntu20.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ARTIFACT_NAME: qtBase_6.5.2_ubuntu20
+          #   CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
+          #   PACKAGE_INSTALL_CALL: sudo apt install
+          #   PACKAGE_DEPENDENCIES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev ninja-build
+          # - os: ubuntu-22.04
+          #   OPEN_SSL_FILE: openSSL_1_1_1u_ubuntu22.zip
+          #   UNZIP_COMMAND: unzip -qa
+          #   ARTIFACT_NAME: qtBase_6.0.2_bionic
+          #   CONFIGURE_EXTRA: -DFEATURE_system_xcb_xinput=OFF
+          #   PACKAGE_INSTALL_CALL: sudo apt install
+          #   PACKAGE_DEPENDENCIES: build-essential '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libatspi2.0-dev ninja-build
+          - os: windows-2019
+            OPEN_SSL_FILE: openSSL_1_1_1u_windows2019.zip
+            UNZIP_COMMAND: 7z x
+            ARTIFACT_NAME: qtBase_6.5.2_win2019
+          - os: windows-2022
+            OPEN_SSL_FILE: openSSL_1_1_1u_windows2022.zip
+            UNZIP_COMMAND: 7z x
+            ARTIFACT_NAME: qtBase_6.5.2_win2022
           # - os: macos-11
           #   OPEN_SSL_FILE: openSSL_1_1_1u_mac11.zip
           #   UNZIP_COMMAND: unzip -qa
